testing/tests/ui/space-pipe.stderr
error: the filter operator `|` must not be preceded by any whitespace characters
       the binary OR operator is called `bitor` in rinja
         --> <source attribute>:1:3
       " |lower}}"
  --> tests/ui/space-pipe.rs:10:34
   |
10 | #[template(ext = "txt", source = "{{a |lower}}")]
   |                                  ^^^^^^^^^^^^^^

error: the filter operator `|` must not be preceded by any whitespace characters
       the binary OR operator is called `bitor` in rinja
         --> <source attribute>:1:3
       " | lower}}"
  --> tests/ui/space-pipe.rs:22:34
   |
22 | #[template(ext = "txt", source = "{{a | lower}}")]
   |                                  ^^^^^^^^^^^^^^^
